# munt-official

./: .bintray_deploy.json  .dependabot.yml  .gitignore  .gitmodules  .mailmap  .travis.yml  CONTRIBUTING.md  COPYING  COPYING_gulden  COPYING_munt  COPYING_novo  INSTALL  INSTALL.md  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  babel.config.js  bintray.json  changelog.txt  configure  configure.ac  libscriptconsensus.pc.in  package.json  stack_trace.md  vue.config.js
src/: App.vue  Gulden-cli-res.rc  Gulden-cli.cpp  Gulden-tx-res.rc  Gulden-tx.cpp  GuldenD-res.rc  GuldenD.cpp  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.in  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.sigmabench.include  Makefile.test.include  Makefile.univalue.include  account.cpp  account.h  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  appname.h  arith_uint256.cpp  arith_uint256.h  auto_checkpoints.cpp  background.js  base58.cpp  base58.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  (+144 more)
src/Gulden/: README.md  auto_checkpoints.cpp  auto_checkpoints.h  diff.h  diff_DGW.h  diff_DIGI.h  diff_common.h  diff_delta.cpp  diff_delta.h  diff_kimoto.h  diff_old.cpp  diff_old.h  guldenapplication.cpp  guldenapplication.h  mnemonic.cpp  mnemonic.h  rpcgulden.cpp  rpcgulden.h  translate.h  util.cpp  util.h
src/LRUCache/: COPYING
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.cppe  bench.h  bench_bitcoin.cpp  bench_gulden.cpp  bench_sigma.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  crypto_hash.cppe  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  rollingbloom.cpp  rollingbloom.cppe  verify_script.cpp
src/compat/: arch.h  assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  sse.h  sse2neon.h  strnlen.cpp  sys.h
src/components/: AppInput.vue  PhraseRepeatInput.vue  PhraseValidator.vue  index.js
src/config/: bitcoin-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/controllers/: rpccontroller.cpp  rpccontroller.h
src/crypto/: aes.cpp  aes.h  bytevectorhash.cpp  bytevectorhash.h  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_sse4.cpp  sha256_x86_shani.cpp  sha512.cpp  sha512.h
src/css/: css-reset.css  novo.less
src/data/: chainparams_mainnet_static_checkpoint_data.cpp  core-packages.licenses  static_diff_data.cpp  staticfiltercp  staticfiltercptestnet
src/generation/: generation.h  miner.cpp  miner.h  witness.cpp  witness.h  witnessrewardtemplate.cpp  witnessrewardtemplate.h
src/guldencoin/: diff.h  diff_DGW.h  diff_DIGI.h  diff_delta.h  diff_kimoto.h  pow.h  rpcgulden.cpp  rpcgulden.h  translate.h
src/libnovo/: NovoBackend.js  index.js
src/locales/: en.json
src/node/: context.cpp  context.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.cppe  fees.h  policy.cpp  policy.cppe  policy.h  rbf.cpp  rbf.cppe  rbf.h
src/pow/: diff.h  diff_common.cpp  diff_common.h  diff_delta.cpp  diff_delta.h  diff_old.cpp  diff_old.h  pow.cpp  pow.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Gulden.qss  GuldenGUI.cpp  GuldenGUI.h  Makefile  accountselectionwidget.cpp  accountselectionwidget.h  accountsettingsdialog.cpp  accountsummarywidget.cpp  accountsummarywidget.h  accounttablemodel.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  amountfield.cpp  amountfield.h  askpassphrasedialog.cpp  askpassphrasedialog.h  backupdialog.cpp  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  callback.h  clickablelabel.h  clickableqrimage.cpp  clickableqrimage.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  (+124 more)
src/router/: index.js
src/rpc/: accounts.cpp  accounts.h  blockchain.cpp  blockchain.cppe  blockchain.h  client.cpp  client.cppe  client.h  mining.cpp  mining.cppe  misc.cpp  misc.cppe  net.cpp  net.cppe  netrpc.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.cppe  register.h  rpcgulden.cpp  server.cpp  server.cppe  server.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  consensus.cpp  consensus.h  guldenconsensus.cpp  guldenconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  Makefile.in  README.md  configure  configure.ac  libsecp256k1.pc.in
src/store/: index.js
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h  pagelocker.cpp  pagelocker.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  coinsindex_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+35 more)
src/unity/: LibUnity.js  UnityBackend.js  appmanager.cpp  appmanager.h  libgulden_unity.gyp  libinit.cpp  libinit.h  libmunt_unity.gyp  libunity.djinni  signals.h  unity_dummy_imp.cpp  unity_impl.cpp  (+1 more)
(+2636 files in other folders)
